--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>Incremental Game</h1>
+    <button onclick="incrementScore()">Click me!</button>
+    <p id="score">Score: 0</p>
     <script src="game.js"></script>
 </body>
 </html>
