--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Draug</title>
+    <title>Incremental Game</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Draug</h1>
-    <button onclick="incrementScore()">Click me!</button>
+    <h1>Incremental Game</h1>
+    <button onclick="incrementScore()">Increment</button>
     <p id="score">Score: 0</p>
+
+    <footer>
+        <button onclick="resetScore()">Reset</button>
+    </footer>
+
     <script src="game.js"></script>
 </body>
 </html>
