--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
     <p id="score">Score: 0</p>
 
     <footer>
-        <button onclick="resetScore()">Reset</button>
+        <button id="resetButton">Reset</button>
     </footer>
 
     <script src="game.js"></script>
+    <script>
+        // Legg til hendelseslytter for reset-knappen
+        document.getElementById('resetButton').addEventListener('click', resetScore);
+    </script>
 </body>
 </html>
