--- a/index.html
+++ b/index.html
@@ -7,13 +7,20 @@
     <style>
         body {
             text-align: center;
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #282c34;
+            color: #61dafb;
             margin: 50px;
+        }
+
+        h1 {
+            color: #61dafb;
         }
 
         #money {
             font-size: 24px;
             margin-bottom: 20px;
+            color: #61dafb;
         }
 
         .btn {
@@ -21,6 +28,15 @@
             padding: 10px 20px;
             cursor: pointer;
             margin: 0 10px;
+            background-color: #61dafb;
+            color: #282c34;
+            border: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .btn:hover {
+            background-color: #45a9d3;
         }
     </style>
 </head>
