--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
             padding: 10px 20px;
             cursor: pointer;
             margin: 0 10px;
-            background-color: #61dafb;
-            color: #282c34;
             border: none;
             border-radius: 5px;
             transition: background-color 0.3s;
@@ -39,12 +37,6 @@
             background-color: #45a9d3;
         }
 
-        #shop {
-            display: flex;
-            justify-content: space-around;
-            margin-top: 30px;
-        }
-
         .upgrade-box {
             background-color: #45a9d3;
             color: #282c34;
@@ -52,6 +44,16 @@
             border-radius: 5px;
             margin: 10px;
             width: 150px;
+            transition: background-color 0.3s;
+        }
+
+        .upgrade-box:hover {
+            background-color: #3689b7;
+        }
+
+        .can-afford {
+            background-color: #61dafb !important;
+            color: #282c34 !important;
         }
     </style>
 </head>
@@ -82,6 +84,7 @@
         function updateMoney() {
             money += incomePerClick + passiveIncome1 + passiveIncome2;
             document.getElementById('money').innerText = money;
+            updateButtonStatus();
             localStorage.setItem('money', money.toString());
         }
 
@@ -93,7 +96,16 @@
             passiveIncome1 = 0;
             passiveIncome2 = 0;
             document.getElementById('money').innerText = money;
+            updateButtonStatus();
             localStorage.setItem('money', money.toString());
+        }
+
+        function updateButtonStatus() {
+            const canAffordUpgrade1 = money >= upgradeCost1;
+            const canAffordUpgrade2 = money >= upgradeCost2;
+
+            document.getElementById('buyUpgrade1Btn').classList.toggle('can-afford', canAffordUpgrade1);
+            document.getElementById('buyUpgrade2Btn').classList.toggle('can-afford', canAffordUpgrade2);
         }
 
         document.getElementById('clickBtn').addEventListener('click', function() {
@@ -111,6 +123,7 @@
                 upgradeCost1 *= 2;
                 document.getElementById('money').innerText = money;
                 alert('Oppgradering 1 kjøpt! Passiv inntekt per sekund: 2');
+                updateButtonStatus();
                 localStorage.setItem('money', money.toString());
             } else {
                 alert('Ikke nok penger til å kjøpe oppgradering 1.');
@@ -124,6 +137,7 @@
                 upgradeCost2 *= 2;
                 document.getElementById('money').innerText = money;
                 alert('Oppgradering 2 kjøpt! Passiv inntekt per sekund: 5');
+                updateButtonStatus();
                 localStorage.setItem('money', money.toString());
             } else {
                 alert('Ikke nok penger til å kjøpe oppgradering 2.');
