--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 <body>
     <h1>Orke itte arbeie</h1>
     <div>
-        <p>Penger: <span id="money">0</span></p>
-        <button id="clickBtn" class="btn btn-can-afford">Klikk meg!</button>
+        <p>Shilling: <span id="money">0</span></p>
+        <button id="clickBtn" class="btn btn-can-afford">Få shilling</button>
         <button id="resetBtn" class="btn">Tilbakestill</button>
     </div>
 
