--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             upgrade2Btn.classList.toggle('upgrade-box-cannot-afford', !canAffordUpgrade2);
         }
 
-        function showUpgradeImage(imageUrl) {
+        function showUpgradeImage(https://www.google.com/search?sca_esv=594236971&rlz=1C1GCEA_enNO1078NO1078&sxsrf=AM9HkKnVQIygrEh3DVAyld3ikKURAfGv-g:1703774153593&q=kiwi+kvam&tbm=isch&source=lnms&sa=X&ved=2ahUKEwj07c6prbKDAxUwBxAIHaNWAIoQ0pQJegQIDxAB&biw=1920&bih=1111&dpr=1#imgrc=4Rt-lVdF08AaCM) {
             const upgradeImagesDiv = document.getElementById('upgradeImages');
             const imageElement = document.createElement('img');
             imageElement.src = imageUrl;
