--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <title>Pølsebutikk Incremental Game</title>
 </head>
 <body>
+  <!-- Legg til denne delen i body-taggen -->
+<div id="user-scores">
+  <h2>Brukernavn og Poengscore</h2>
+  <ul id="user-list"></ul>
+</div>
+
   <div id="game-container">
     <h1>Pølsebutikk Incremental Game</h1>
     <p>Velkommen, <span id="username">spiller</span>!</p>
