--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tress Spill</title>
     <link rel="stylesheet" href="styles.css">
+    <title>Text Game</title>
 </head>
 <body>
+    <div id="game-container">
+        <h1 id="score">Score: 0</h1>
+        <button id="click-button">Click</button>
+        <button id="idle-button">Start Idle</button>
+    </div>
 
-<div id="game-container">
-    <!-- Game content goes here -->
-</div>
-
-<script src="main.js"></script>
+    <script src="game.js"></script>
 </body>
 </html>
